crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__add_attributes_to_s_v_g_element__add_attributes_to_s_v_g_element-4.snap
---
source: crates/oxvg_optimiser/src/jobs/add_attributes_to_s_v_g_element.rs
expression: "test_config(r#\"{ \"addAttributesToSVGElement\": {\n            \"attributes\": { \"data-icon\": \"\" }\n        } }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Ignore nested <svg> elements -->\n    test\n    <svg />\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" data-icon="">
    <!-- Ignore nested <svg> elements -->
    test
    <svg/>
</svg>
